--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.url = jdbc:postgresql://ep-cool-lake-a46rtt2d-pooler.us-east-1.aws.neon.tech:5432/verceldb
 spring.datasource.username = default
 spring.datasource.password = kcqhm5QXMz7L
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.current_session_context_class=thread
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
