--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.26</version> <!-- o la última versión disponible -->
+		<scope>provided</scope>
+	</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
